# easytime

./: .git-blame-ignore-revs  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml  bors.toml  build.rs  clippy.toml
.github/: bors.toml
.github/.cspell/: project-dictionary.txt  rust-dependencies.txt
.github/workflows/: ci.yml
ci/: azure-test.yml
src/: duration.rs  error.rs  instant.rs  lib.rs  system_time.rs  utils.rs
tests/: duration.rs  instant.rs  system_time.rs  test.rs
tests/doc/: Cargo.toml
tools/codegen/: Cargo.toml
tools/codegen/src/: file.rs  main.rs
