[package]
name = "easytime"
version = "0.2.3"
edition = "2018"
rust-version = "1.34"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/easytime"
keywords = ["date", "time", "duration", "instant"]
categories = ["date-and-time", "no-std"]
exclude = ["/.*", "/tools"]
description = """
Providing wrapper types for safely performing panic-free checked arithmetic on instants and durations.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["tests/doc", "tools/codegen"]

[features]
default = ["std"]
std = []

[dependencies]
const_fn = "0.4"
