[package]
name = "easytime"
version = "0.2.6"
edition = "2021"
rust-version = "1.58"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/easytime"
keywords = ["date", "time", "duration", "instant"]
categories = ["date-and-time", "no-std", "no-std::no-alloc"]
exclude = ["/.*", "/tools"]
description = """
Providing wrapper types for safely performing panic-free checked arithmetic on instants and durations.
"""

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.cargo_check_external_types]
# The following are external types that are allowed to be exposed in our public API.
allowed_external_types = []

[workspace]
resolver = "2"
members = ["tools/codegen"]

[lib]
doc-scrape-examples = false

[features]
default = ["std"]
std = []
